added mapbox api now working on tabs displaying correctly

--- a/style.css
+++ b/style.css
@@ -59,6 +59,10 @@ header .overlay {
     z-index: 1;
 }
 
+#map {
+    width: 300px;
+    height: 300px;
+}
 .btnLink {
     border: 0 !important;
 }
