--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@media (pointer: coarse) and (hover: none) {
-    header {
-        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
-    }
-    header video {
-        display: none;
-    }
-}
+/*@media (pointer: coarse) and (hover: none) {*/
+/*    header {*/
+/*        background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;*/
+/*    }*/
+/*    header video {*/
+/*        display: none;*/
+/*    }*/
+/*}*/
 
 /*body {*/
 /*    background-image: url("textureBack.jpg");*/
@@ -60,9 +60,12 @@ header .overlay {
 }
 
 #map {
-    width: 300px;
-    height: 300px;
+    /* the width and height may be set to any size */
+    width: 50%;
+    height: 600px;
+    margin: 0 auto;
 }
+
 .btnLink {
     border: 0 !important;
 }
